```mermaid
erDiagram
    %% Nhóm dữ liệu Vĩ mô (Macroeconomic Data)
    MACRO_INDICATOR {
        String id PK
        String indicatorCode "VD: CPI_YOY, GDP_GROWTH"
        String indicatorName
        Decimal value
        String unit "VD: percent"
        String period "VD: 2025-Q4"
        String frequency "VD: quarterly"
        String sourceName
        String sourceUrl
        DateTime asOf
        DataMode dataMode
        Boolean productionApproved
        String notes
    }

    %% Nhóm dữ liệu Ngành (Industry Data)
    INDUSTRY_METRIC {
        String id PK
        String industryCode "VD: STEEL, BANKING"
        String industryName
        String metricCode "VD: CREDIT_GROWTH"
        String metricName
        Decimal value
        String unit
        String period
        String sourceName
        String sourceUrl
        DataMode dataMode
        Boolean productionApproved
        String notes
    }

    %% Nhóm dữ liệu Định tính & Bối cảnh (Qualitative Context)
    CONTEXT_NOTE {
        String id PK
        String scopeType "Enum: macro, industry, ticker"
        String scopeCode "VD: CPI, STEEL, HPG"
        String title
        String content "VD: Lãi suất giảm hỗ trợ nhóm vay nợ cao"
        String sentimentOrRiskLevel "positive, negative, neutral, high_risk"
        String sourceLabel
        DateTime asOf
        DataMode dataMode
        Boolean productionApproved
    }

    %% Quan hệ logic (Polymorphic relations)
    CONTEXT_NOTE ||--o{ MACRO_INDICATOR : "explains (scopeType=macro)"
    CONTEXT_NOTE ||--o{ INDUSTRY_METRIC : "explains (scopeType=industry)"
    
    %% Lưu ý: CONTEXT_NOTE cũng có thể liên kết logic tới bảng COMPANY ở các sơ đồ trước
    %% thông qua scopeType=ticker và scopeCode=ticker (VD: HPG)
```
